# ShousetsukaScraper

./: README.md  setup.cfg
src/syosetsuka/: .gitignore  download_result.py  downloader.py  main.py  novel.py  parsing_result.py  request_creator.py  request_parameter.py  shousetsuka_api.py
