[metadata]
name = syosetsuka-Catley
version = 0.0.1
author = Marley Mulvin Broome
author_email = marley.developer@gmail.com
description = An api wrapper and web scraper for the popular Japanese light novel website syosetu.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CSharpProjector/
project_urls =
    Bug Tracker = https://github.com/CSharpProjector//issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src